--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "get-module-pkg",
   "version": "1.0.0",
-  "description": "Get your module's package.json",
+  "description": "Get your module's package.json without importing it",
   "main": "source/index.js",
   "author": "Connor White",
   "license": "MIT",
