--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "get-module-pkg",
   "version": "1.0.0",
   "description": "Get your module's package.json without importing it",
-  "main": "source/index.js",
+  "main": "./build/index.js",
   "author": "Connor White",
   "license": "MIT",
   "private": false,
